<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.UpdateExpensesFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/main_color"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/medium"
                    android:text="@string/updateExpences"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/expenceDate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/expensesDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_bg"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/addNewExpences"
                    android:textAlignment="textStart"
                    tools:ignore="RtlCompat" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/regular"
                    android:text="@string/enterAmount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:fontFamily="@font/regular"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_10sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/regular"
                    android:text="@string/selectCategory"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/categorySpinner"
                        style="@style/Widget.AppCompat.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/edittext_bg"
                        android:dropDownWidth="wrap_content"
                        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                        android:popupBackground="@android:color/white"
                        android:stateListAnimator="@drawable/spinner_sla" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="-35dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addNewExpence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/main_button"
                    android:fontFamily="@font/medium"
                    android:text="@string/updateExpences"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</layout>